# stowage

./: Cargo.toml  README.md
examples/: basic.rs  ftp_example.rs  multi_storage.rs  multi_storage_example.rs  queue_move.rs  sftp_example.rs
scripts/: start-minio.sh  stop-minio.sh
src/: lib.rs
src/adapters/: azure.rs  box_storage.rs  dropbox.rs  ftp.rs  gdrive.rs  local.rs  memory.rs  onedrive.rs  s3.rs  sftp.rs  webdav.rs
src/adapters/multi/: fallback.rs  migration.rs  mirror.rs  mod.rs  readonly.rs
tests/: adapter_compliance.rs  error_tests.rs  fallback_tests.rs  integration_tests.rs  local_tests.rs  memory_tests.rs  migration_tests.rs  multi_storage_test.rs  readonly_tests.rs  s3_tests.rs  test_common.rs
tests/test_common/: mod.rs
